data/derived/comb/progs/unify/prog3884.ml.out
Characters 164-172:
  (digits x/10 l)
   ^^^^^^^^
Error: This expression has type 'a -> int list
       but an expression was expected of type int
